increase speed of animation, i am also a public speaker, i want to add all those details also youtube links of some of talks, render thumbnail

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,7 +127,7 @@
 
   .animate-marquee-scroll {
     display: flex;
-    animation: marquee-scroll-animation 40s linear infinite;
+    animation: marquee-scroll-animation 25s linear infinite; /* Updated speed from 40s to 25s */
   }
 
   .marquee-item {
